completes webpage customisation
* adds a new PDF rendering component in the template
* Adds two images for the carousel
* Adds the Project report in PDF format

--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h1>Project Title</h1>
+          <h1>Minority Report</h1>
           <ol>
             <li><a href="https://aadhityasw.github.io/">Home</a></li>
             <li><a href="https://aadhityasw.github.io/#portfolio">Portfolio</a></li>
-            <li>Project Title</li>
+            <li>Minority Report</li>
           </ol>
         </div>
 
@@ -94,15 +94,11 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/image-1.jpg" alt="">
+                  <img src="assets/img/minority_report1.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/image-2.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/image-3.jpg" alt="">
+                  <img src="assets/img/minority-report2.jpg" alt="">
                 </div>
 
               </div>
@@ -114,38 +110,87 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
+                <li><strong>Category</strong>: Data Analytics</li>
                 <li>
                   <strong>Authors</strong>:
-                  <a href="#">@sample-author-2</a>
-                  <a href="#">@sample-author-2</a>
+                  <a href="https://github.com/aadhityasw">@aadhityasw</a>
+                  <a href="https://github.com/sumitajmera">@sumitajmera</a>
                 </li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Project date</strong>: March, 2021 - June, 2021</li>
+                <li><strong>Project URL</strong>: <a href="https://github.com/aadhityasw/Minority-Report">Github Repository</a></li>
                 <li>
                   <strong>Tags</strong>:
-                  <p class="tag">sample-tag-1</p>
-                  <p class="tag">sample-tag-2</p>
-                  <p class="tag">sample-tag-3</p>
-                  <p class="tag">sample-tag-4</p>
+                  <p class="tag">Exploratory Data Analytics</p>
+                  <p class="tag">Machine Learning</p>
+                  <p class="tag">sk-learn</p>
+                  <p class="tag">Decision Trees</p>
+                  <p class="tag">Light GBM</p>
+                  <p class="tag">Naive Bayes</p>
                 </li>
               </ul>
             </div>
+            <!--
             <div class="portfolio-description">
               <h2>Summary</h2>
               <p>
-                Project Summary (a small paragraph)
+                Summary (Removed due to empty space of the left side)
               </p>
             </div>
+            -->
           </div>
 
         </div>
 
-        <div>
-          <h1>Title</h1>
+        <div class="portfolio-description">
+          <h2>CRIME ANALYSIS AND PREDICTION</h2>
           <p>
-            This is a detailed description with illustrations, images, links, etc.
+            &nbsp;&nbsp;&nbsp;&nbsp;Machine Learning has swept the world and has shown what computers are capable of with the right data. 
+            In this paper, we aim to apply Machine Learning Algorithms to improve the field of crime analysis and
+            prediction. We have analysed the top rated machine learning algorithms on being able to predict crimes
+            to a good scale of accuracy.
+            <br><br>
+            
+            &nbsp;&nbsp;&nbsp;&nbsp;The Classification algorithm is a Supervised Learning technique that is used to identify the category 
+            of new observations on the basis of training data. In Classification, a program learns from the given 
+            dataset or observations and then classifies new observations into a number of classes or groups. The 
+            main goal of the Classification algorithm is to identify the category of a given dataset, and these 
+            algorithms are mainly used to predict the output for the categorical data. Some of the best examples 
+            of this are the spam classifiers in our mailboxes which classifies the mail to be spam or not. More 
+            specifically here we use a Multi-class Classifier algorithm, which refers to those classification 
+            tasks that have more than two class labels. Multi-class classification does not have the notion of 
+            normal and abnormal outcomes. Instead, examples are classified as belonging to one among a range 
+            of known classes. The number of class labels may be very large on some problems like in this current 
+            case.
+            <br><br>
+
+            We use a total of 7 classifiers to compare their performance :
+            <ol>
+              <li>Decision Tree (ID3)</li>
+              <li>Random Forest</li>
+              <li>Extra Tree</li>
+              <li>K Nearest Neighbor</li>
+              <li>Bernoulli Naive Bayes</li>
+              <li>Gaussian Naive Bayes</li>
+              <li>Light GBM</li>
+            </ol>
+
+
+            &nbsp;&nbsp;&nbsp;&nbsp;We have in this paper taken up 7 Machine Learning Algorithms, and have applied them to a total 
+            of 3 scenarios to see how they perform in varying conditions. We have also concluded by the 
+            results that the LightGBM model has secured the best metric scores among the lot in these scenarios. 
+            Thus it can be concluded for now that this algorithm can be used, but the fight against crime does 
+            not stop at this level of accuracy.
+            <br><br>
+
+            Refer to the below PDF Document for more detailed explanation of the same
           </p>
+        </div>
+
+        <div class="portfolio-description">
+          <h2>Project Report</h2>
+          <div style="text-align: center; padding-top: 40px;">
+            <iframe src="project_report.pdf" width="100%" height="500px" style="max-width: 900px;"></iframe>
+          </div>
         </div>
 
       </div>
